k3s/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
      nodePort: 30080
    - name: https
      port: 8920
      targetPort: 8920
      nodePort: 30081
    - name: auto-discovery
      port: 7359
      targetPort: 7359
      protocol: UDP
    - name: dlna
      port: 1900
      targetPort: 1900
      protocol: UDP
  type: NodePort
